[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["cdylib", "rlib"]

[[bin]]
name = "worker"
test = false
bench = false
path = "src/worker/main.rs"

[[bin]]
name = "orb"
test = false
bench = false
path = "src/orb/main.rs"

[[bin]]
name = "http_worker"
test = false
bench = false
path = "src/http_worker/main.rs"

[[bin]]
name = "gui"
test = false
bench = false
path = "src/gui/gui.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "gzip"] }
mylib = { path = "lib" }
anyhow = "1.0.79"
bytes = "1.6.0"
deadpool = { version = "0.11.2", features = ["unmanaged"] }
diesel = { version = "2.1.6", features = ["sqlite", "numeric", "chrono"] }
dotenvy = "0.15.7"
fantoccini = "0.19.3"
futures = "0.3.30"
log = "0.4.20"
opencv = "0.92.2"
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
indicatif = "0.17.8"
rayon = "1.10.0"
ratatui = "0.26.3"
crossterm = "0.27.0"
env_logger = "0.11.3"
serde = "1.0.202"
serde_derive = "1.0.202"
clap = { version = "4.5.4", features = ["derive"] }
keyed_priority_queue = "0.4.2"
egui = "0.27.2"
egui_glow = "0.27.2"
egui-winit = "0.27.2"
eframe = "0.27.2"
egui_extras = "0.27.2"
dlib-face-recognition = { version = "0.3.2", features = ["build-native"] }
