[package]
name = "mylib"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.79"
diesel = { version = "2.1.6", features = [
    "sqlite",
    "numeric",
    "chrono",
    "extras",
] }
dotenvy = "0.15.7"
indicatif = "0.17.8"
serde = "1.0.201"
serde_derive = "1.0.201"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
